<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="AnalogInputParametersFB" Id="{e766f1f7-f183-44ee-8a02-b37c486db9e7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK AnalogInputParametersFB
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Update" Id="{8483c25b-6617-4e28-ac3f-e8aa1724067f}">
      <Declaration><![CDATA[METHOD Update : BOOL
VAR_INPUT
	AI: REFERENCE TO GreenMasterAI_Base;
	AI2: REFERENCE TO GreenMasterAIU_Base;
	Parameters: REFERENCE TO GreenMasterBaseParameters;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT Parameters.System.Operation.Simulation THEN
	Parameters.IO.AIn.F_BT1 := AI.F_BT1;
	Parameters.IO.AIn.F_BT1_Error := AI.F_BT1_Error AND Parameters.IO.AIn.F_BT1_EN;
	Parameters.IO.AIn.T_BT2 := AI.T_BT2;
	Parameters.IO.AIn.T_BT2_Error := AI.T_BT2_Error AND Parameters.IO.AIn.T_BT2_EN;
	Parameters.IO.AIn.T_BT3 := AI.T_BT3;
	Parameters.IO.AIn.T_BT3_Error := AI.T_BT3_Error AND Parameters.IO.AIn.T_BT3_EN;
	Parameters.IO.AIn.H_BT1 := AI.H_BT1;
	Parameters.IO.AIn.H_BT1_Error := AI.H_BT1_Error AND Parameters.IO.AIn.H_BT1_EN;
	Parameters.IO.AIn.T_BT1 := AI.T_BT1; 
	Parameters.IO.AIn.T_BT1_Error := AI.T_BT1_Error AND Parameters.IO.AIn.T_BT1_EN;
	Parameters.IO.AIn.BT1 := AI.BT1;
	Parameters.IO.AIn.BT1_Error := AI.BT1_Error AND Parameters.IO.AIn.BT1_EN;
	Parameters.IO.AIn.BT2 := AI.BT2;
	Parameters.IO.AIn.BT2_Error := AI.BT2_Error AND Parameters.IO.AIn.BT2_EN;
	Parameters.IO.AIn.F_BT2 := AI.F_BT2;
	Parameters.IO.AIn.F_BT2_Error := AI.F_BT2_Error AND Parameters.IO.AIn.F_BT2_EN;
	Parameters.IO.AIn.F_BP1 := AI2.F_BP1;
	Parameters.IO.AIn.F_BP1_Error := AI2.F_BP1_Error AND Parameters.IO.AIn.F_BP1_EN;
	Parameters.IO.AIn.T_BP1 := AI2.T_BP1;
	Parameters.IO.AIn.T_BP1_Error := AI2.T_BP1_Error AND Parameters.IO.AIn.T_BP1_EN;
	Parameters.IO.AIn.F_BP2 := AI2.F_BP2;
	Parameters.IO.AIn.F_BP2_Error := AI2.F_BP2_Error AND Parameters.IO.AIn.F_BP2_EN;
	Parameters.IO.AIn.T_BP2 := AI2.T_BP2;
	Parameters.IO.AIn.T_BP2_Error := AI2.T_BP2_Error AND Parameters.IO.AIn.T_BP2_EN;
	Parameters.IO.AIn.F_BP3 := AI2.F_BP3;
	Parameters.IO.AIn.F_BP3_Error := AI2.F_BP3_Error AND Parameters.IO.AIn.F_BP3_EN;
	Parameters.IO.AIn.T_BF1 := AI2.T_BF1;
	Parameters.IO.AIn.T_BF1_Error := AI2.T_BF1_Error AND Parameters.IO.AIn.T_BF1_EN;
	Parameters.IO.AIn.F_BF1 := AI2.F_BF1;	
	Parameters.IO.AIn.F_BF1_Error := AI2.F_BF1_Error AND Parameters.IO.AIn.F_BF1_EN;
ELSE
	Parameters.IO.AIn.F_BT1_Error := FALSE;
	Parameters.IO.AIn.T_BT2_Error := FALSE;
	Parameters.IO.AIn.T_BT3_Error := FALSE;
	Parameters.IO.AIn.H_BT1_Error := FALSE;
	Parameters.IO.AIn.T_BT1_Error := FALSE;
	Parameters.IO.AIn.BT1_Error := FALSE;
	Parameters.IO.AIn.BT2_Error := FALSE;
	Parameters.IO.AIn.F_BT2_Error := FALSE;
	Parameters.IO.AIn.F_BP1_Error := FALSE;
	Parameters.IO.AIn.T_BP1_Error := FALSE;
	Parameters.IO.AIn.F_BP2_Error := FALSE;
	Parameters.IO.AIn.T_BP2_Error := FALSE;
	Parameters.IO.AIn.F_BP3_Error := FALSE;
	Parameters.IO.AIn.T_BF1_Error := FALSE;
	Parameters.IO.AIn.F_BF1_Error := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>